<resources>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="app_name">INZpro</string>
    <string name="ctrl_back">返回</string>
    <string name="ctrl_replay">回放</string>
    <string name="ctrl_alarm">入侵报警</string>
    <string name="ctrl_record">录像</string>
    <string name="ctrl_record_stop">停止录像</string>
    <string name="ctrl_catch">拍照</string>
    <string name="ctrl_setting">修改密码</string>
    <string name="ctrl_setting_save">确认</string>
    <string name="play_list_title_record">录像</string>
    <string name="play_list_title_remote">高清视频</string>
    <string name="play_list_title_subview">录像视频</string>
    <string name="play_list_title_picture">照片</string>

    <string name="catchPicTo">图片已保存到</string>
    <string name="catchPicError">图片保存失败！！</string>
    <string name="recordFileError">录像失败！！</string>
    <string name="play_speed">倍速：</string>
    <string name="item_del">删除</string>
    <string name="item_share">分享</string>
    <string name="item_del_msg_picture">删除这张图片？</string>
    <string name="item_del_msg_video">删除这段视频？</string>
    <string name="share_pic">分享图片</string>
    <string name="big_image_activity_dialog_title_remove">删除</string>
    <string name="big_image_activity_dialog_message">删除这张照片？</string>
    <string name="big_image_activity_dialog_yes_button_name">确定</string>
    <string name="big_image_activity_dialog_no_button_name">取消</string>


    <string name="share_share">分享</string>
    <string name="share_del">删除</string>
    <string name="share_cancel">取消</string>
    <string name="share_no_file_error">请选择要分享的文件</string>

    <string name="share_convert_wait">正在处理...</string>

    <string name="replay_state_error">回放文件无法重复录像！！</string>
    <string name="alarm_msg_text">收到报警！</string>

    <string name="step_next_error">单步进失败！！</string>
    <string name="step_last_error">单步退失败！！</string>

    <string name="setting_title">设置</string>
    <string name="setting_ssid_name">WIFI名称：</string>
    <string name="setting_ssid_pwd">WIFI密码：</string>
    <string name="setting_last_btn">显示上一次</string>
    
    <string name="password_original">原始密码</string>
    <string name="password_new">新密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_error">密码至少8位，请重新输入!!</string>
    <string name="password_save_error">保存密码失败,请重试!!</string>
    <string name="password_save_ok">设置成功，正在重启</string>

    <string name="remote_control_btn">遥控申请</string>
    <string name="remote_control_btn_fast">转速快</string>
    <string name="remote_control_btn_normal">转速中</string>
    <string name="remote_control_btn_slow">转速慢</string>
    <string name="remote_control_btn_cruise_90">90°巡航</string>
    <string name="remote_control_btn_cruise_180">180°巡航</string>
    <string name="remote_control_btn_infrared">红外</string>
    <string name="remote_control_btn_zoom_in">焦距短</string>
    <string name="remote_control_btn_zoom_out">焦距长</string>
    <string name="ptz_state_error">有其他设备登入</string>
</resources>
