<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="vm"
            type="com.inz.model.main.MainViewModel"/>
    </data>



    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:orientation="horizontal"
        android:background="@drawable/ctrl_border"
        android:visibility="@{vm.MCtrlVisibility}"
        >

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/ctrl_btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_back"
            style="@style/MyCtrlButton"
            android:onClick="@{vm.onClickCtrlBack}"/>

        <Button
            android:id="@+id/ctrl_btn_replay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_replay"
            style="@style/MyCtrlButton"
            android:onClick="@{vm.onClickCtrlReplay}"/>

        <Button
            android:id="@+id/ctrl_btn_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_alarm"
            style="@style/MyCtrlButton"
            android:onClick="@{vm.onClickCtrlAlarm}"/>

        <Button
            android:id="@+id/ctrl_btn_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_record"
            style="@style/MyCtrlButton"
            android:onClick="@{vm.onClickCtrlRecord}"/>

        <Button
            android:id="@+id/ctrl_btn_catch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_catch"
            style="@style/MyCtrlButton"
            android:onClick="@{vm.onClickCtrlCatch}"/>

    </LinearLayout>


</layout>