<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="vm"
            type="com.inz.model.main.MainCtrlModel"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyCtrlButton"
            android:text="@string/ctrl_setting"
            android:layout_gravity="center_vertical"
            android:onClick="@{vm.onClickSetting}"
            android:visibility="visible"
            />



        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyCtrlButton"
            android:text="test"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:onClick="@{vm.onClickCtrlTest}"
            android:visibility="gone"
            />


        <Button
            android:id="@+id/ctrl_btn_catch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_catch"
            style="@style/MyCtrlButton"
            android:layout_gravity="center_vertical"
            android:onClick="@{vm.onClickCtrlCatch}"
            android:visibility="@{vm.MCatchBtnVisibility}" />

        <Button
            android:id="@+id/ctrl_btn_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{vm.MRecordText}"
            android:textColor="@{vm.MRecordTextColor}"
            style="@style/MyCtrlButton"
            android:layout_gravity="center_vertical"
            android:onClick="@{vm.onClickCtrlRecord}"
            android:visibility="@{vm.mRecordBtnVisibility}"
            />

        <Button
            android:id="@+id/ctrl_btn_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ctrl_alarm"
            android:textColor="@{vm.MAlarmTextColor}"
            android:textSize="@dimen/main_ctrl_text_size_small"
            android:layout_gravity="center_vertical"
            style="@style/MyCtrlButton"
            android:onClick="@{vm.onClickCtrlAlarm}"
            android:visibility="visible"/>

    </LinearLayout>



</layout>