<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.inz.model.main.SettingModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/password_ll_padding"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
               android:layout_height="wrap_content"
                android:layout_width="@dimen/password_text_width"
                android:text="@string/password_original"
                android:textColor="@color/black"
                android:background="@drawable/ll_border_lefttop"
                android:padding="19dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:background="@drawable/ll_border_righttop"
                android:padding="@dimen/password_text_padding"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="@dimen/password_text_width"
                android:text="@string/password_new"
                android:textColor="@color/black"
                android:background="@drawable/ll_border_lefttop"
                android:padding="19dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/red"
                android:background="@drawable/ll_border_righttop"
                android:padding="@dimen/password_text_padding"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="@dimen/password_text_width"
                android:text="@string/password_confirm"
                android:textColor="@color/black"
                android:background="@drawable/ll_border_leftbottom"
                android:padding="19dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/red"
                android:background="@drawable/ll_border_rightbottom"
                android:padding="@dimen/password_text_padding"
                />

        </LinearLayout>





    </LinearLayout>



















</layout>