<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.inz.model.main.PlayListModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/play_list_padding_end"
        android:paddingRight="@dimen/play_list_padding_end"
        >
        <!--android:background="@color/main_bk_dark"-->


        <!--android:background="@color/main_bk_dark"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="@{vm.MPlayListTitleBtnRecordFile}"
            android:background="@drawable/play_list_title_btn"
            android:padding="@dimen/play_list_padding"
            >
            <!--android:src="@drawable/ic_expand_more_white"-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:play_list_title_src="@{vm.MShowRecordFile}"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_list_title_record"
                android:textColor="@color/white_highlight"
                android:textSize="@dimen/play_list_title_size"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/video_list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="@{vm.MRecordListVisibility}"

            app:update_video_list="@{vm.MUpdateVideoList}"
            />


        <!-- remote file -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="@{vm.MPlayListTitleBtnRemoteFile}"
            android:background="@drawable/play_list_title_btn"
            android:padding="@dimen/play_list_padding"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:play_list_title_src="@{vm.mShowRemoteFile}"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_list_title_remote"
                android:textColor="@color/white_highlight"
                android:textSize="@dimen/play_list_title_size"
                android:layout_gravity="center_vertical"/>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/video_list_rr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="@{vm.MRemoteListVisibility}"
            app:update_remote_list="@{vm.MUpdateRemoteList}"
            />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="@{vm.mPlayListTitleBtnPictureFile}"
            android:background="@drawable/play_list_title_btn"
            android:padding="@dimen/play_list_padding"
            >
            <!--android:src="@drawable/ic_expand_more_white"-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:play_list_title_src="@{vm.MShowPictureFile}"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_list_title_picture"
                android:textColor="@color/white_highlight"
                android:textSize="@dimen/play_list_title_size"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/video_list_rp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="@{vm.MPictureListVisibility}"
            app:update_picture_list="@{vm.MUpdatePictureList}"
            app:update_picture_cmd="@{vm.MUpdatePictureCmd}"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            app:visible_action_down="@{vm.mCmdBtnVisibility}"
           >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{vm.mCmdBtnText}"
                android:textColor="@color/colorAccent"
                android:background="@drawable/my_share_btn"
                android:onClick="@{vm.onCmdClick}"
                style="@style/list_fun_btn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_cancel"
                android:textColor="@color/colorAccent"
                android:background="@drawable/my_share_btn"
                android:onClick="@{vm.onCmdCancelClick}"
                style="@style/list_fun_btn"/>

        </LinearLayout>



    </LinearLayout>




</layout>